# nanowiki

./: .gitignore  Cargo.toml  README.md
src/: main.rs  storage.rs  templates.rs
src/routes/: article.rs  delete.rs  edit.rs  index.rs  mod.rs  root.rs  update.rs
static/: style.css
templates/: article.html  edit.html  index.html
