[package]
name = "nanowiki"
version = "0.1.0"
edition = "2021"
authors = ["Paddyk45"]
repository = "https://github.com/Paddyk45/nanowiki"
readme = "README.md"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
html-escape = "0.2.13"
pulldown-cmark = "0.10.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing-subscriber = "0.3.18"
url = "2.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
chrono = "0.4.37"
